# silocache

./: README.md  pyproject.toml
.githooks/: pre-commit-config.yaml
.github/workflows/: build.yml
silocache/: __init__.py
tests/: test_silocache.py
