[project]
name = "silocache"
dynamic = ["version"]
description = "SiloCache - Thread/EventLoop Isolated Caching"
requires-python = ">=3.12,<4.0"
maintainers = [
    { name = "Vitor Hideyoshi", email = "vitor.h.n.batista@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",

    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "MIT"
readme = "README.md"

# Project Dependencies
dependencies = [
    "poethepoet>=0.48.0",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "mypy>=1.18.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.4",
]


[project.urls]
homepage = "https://github.com/HideyoshiNakazone/silocache"
repository = "https://github.com/HideyoshiNakazone/silocache.git"


# POE Tasks
[tool.poe.tasks]
create-hooks        = "bash .githooks/set-hooks.sh"
tests               = "python -m pytest --cov=silocache -v"
tests-report        = "python -m coverage xml"

# Build System
[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


# Tests
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "tests/*",
]



# Linters
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["silocache"]
section-order=[
    "future",
    "first-party",
    "local-folder",
    "third-party",
    "standard-library",
]
lines-after-imports = 2


[tool.pyright]
venvPath = "."
venv = ".venv"
